# TodoApp

./: README.md  package-lock.json  package.json
.github/workflows/: google-cloudrun-source.yml
Infrastructure/: .gitignore  cloudrun.tf  main.tf  variables.tf
backend/: .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: db.rs  index.ts  main.rs
backend/src/db/: model.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/api/: TaskService.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AddTaskButton.tsx  Header.tsx  Navigator.tsx  TaskComponent.tsx  User.tsx
frontend/src/: App.tsx
frontend/src/api/: Task.ts  TaskService.ts
frontend/src/components/: AddTaskButton.tsx  TaskComponent.tsx
src/: index.ts
