[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
futures = "0.3.29"
mongodb = "2.7.0"
serde = "1.0.190"
serde_json = "1.0.108"
tokio = "1.33.0"
tower-http = {version="0.4.4", features = ["cors"]}


[[bin]]
name = "backend"
path = "src/main.rs"
